# easyVer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.agents/rules/: action.md
app/: app_config.py  application.py  logger.py  resource_rc.py  signal_bus.py  style_sheet.py
core/: __init__.py  diff.py  hasher.py  repository.py  snapshot.py  storage.py  tag.py  working_tree.py
core/workers/: commit_worker.py  file_load_worker.py  scan_worker.py
db/: __init__.py  connection.py  migrator.py
db/migrations/: 001_init.sql  002_add_hash_id.sql  003_update_tags_unique.sql
db/repositories/: __init__.py  file_dao.py  repo_dao.py  snapshot_dao.py  tag_dao.py
docs/: operateLog.md
resources/: resource.qrc
resources/qss/dark/: repo_page.qss  setting_page.qss
resources/qss/light/: repo_page.qss  welcome_page.qss
ui/: main_window.py
ui/dialogs/: create_milestone_dialog.py  diff_window.py  extract_dialog.py  new_repo_dialog.py  tag_dialog.py  tag_filter_dialog.py
ui/pages/: repo_page.py  settings_page.py  welcome_page.py
ui/widgets/: milestone_card.py  milestone_detail_panel.py  milestone_list_panel.py  milestone_tool_bar.py  tag_badge.py  tag_color_picker.py  working_tree_panel.py
utils/: __init__.py  datetime_utils.py  file_utils.py  icon_provider.py
