[tool.poetry]
name = "easyver"
version = "0.1.0"
description = "A fully local version management tool for any file type"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.6.0"
PyQt6-Fluent-Widgets = ">=1.6.0"
zstandard = "^0.22.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-qt = "^4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
